# dctk

./: .gitignore  CMakeLists.txt  INSTALL-TAU2023.md  INSTALL.md  INSTALL.txt  LICENSE  README.md
benchmarks/: README.txt
etc/: dispatch_parallel_sims
etc/ccs_test/: ccs_test.py  readme  test_ckt1.ckt  test_ckt2.ckt
etc/preprocess_nangate/: preprocess_liberty.py  runme
src/: AsuDriverWave.hpp  Benchmarks.hpp  Cell.cpp  Cell.hpp  CellArc.cpp  CellArc.hpp  CellLib.cpp  CellLib.hpp  CellPin.cpp  CellPin.hpp  Circuit.cpp  Circuit.hpp  PiModel.hpp  RCNet.cpp  RCNet.hpp  RandomRCNet.h  RandomRCNet.hpp  circuit_reader.cpp  circuit_reader.hpp  dctk.hpp  delay_calc_tool.cpp  gen_random_nets.cpp  liberty_reader.cpp  liberty_reader.hpp  ot  partition_timing_graph.cpp  spice_lib_reader.cpp  spice_lib_reader.hpp
src-dut/: delay_calculator.cpp  delay_calculator.hpp
src-etc/: RandomRCNet.cc  RandomRCNet.h
src-liberty_parse-2.6/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  PI.c  PI.loT  attr_lookup.c  config.status  configure  configure.ac  group_lookup.c  liberty_parser.c  liberty_parser.h  liberty_parser.output  libhash.c  libstrtab.c  libtool  ltmain.sh  main.c  makelib  pi_uhu.txt  syntax_checks.c  syntax_decls.c  syntax_decls.h  syntax_parser.c  syntax_parser.c.html  syntax_parser.h  syntax_parser.output  syntform.c  synttok.c
src-liberty_parse-2.6/perl/: Changes  MANIFEST  Makefile.PL  README  liberty.i  liberty.pm  liberty_wrap.c  t1.pl
src-liberty_parse-2.6/perl/t/: liberty.t
src-liberty_parse-2.6/test/: defgroup.lib  defgroup.ref  example.2clibnam.lib  example.2clibnam.ref  example.2libnam.lib  example.2libnam.ref  example.2pin.lib  example.2pin.ref  example.access.lib  example.access.ref  example.badcurly.lib  example.badcurly.ref  example.baddir.lib  example.baddir.ref  example.badiface.lib  example.badiface.ref  example.badmem.lib  example.badmem.ref  example.badmem2.lib  example.badmem2.ref  example.badmod.lib  example.badmod.ref  example.badmod2.lib  example.badmod2.ref  example.badtech.lib  example.badtech.out  example.badtech.ref  example.badtim.lib  example.badtim.ref  example.badval.lib  example.badval.ref  example.badval2.lib  example.badval2.ref  example.badval3.lib  example.badval3.ref  example.buspindir.lib  example.buspindir.ref  example.ccs.lib  example.ccs.ref  example.closesemi.lib  (+79 more)
test/: README.txt  buf_inv.lib  dispatch_parallel_sims  run_testsuite  runme  runme.asu  runme.asu.2021  runme.asu.bulk  runme.gen_stresssuite  runme.gen_testsuite  runme.nangate  runme.ptg  runme.runtime  runme.smoketest  runme.testsuite  tau2020_asu.circuits.yaml  tau2020_asu.spef  tau2020_asu.taucommittee.circuits.yaml  tau2020_asu.taucommittee.dc.circuits.yaml  tau2020_asu.taucommittee.merged.circuits.yaml  tau2020_nangate.circuits.yaml  tau2020_nangate.spef  tau2020_nangate.taucommittee.dc.circuits.yaml  tau2020_nangate.taucommittee.merged.circuits.yaml  tau2020_testsuite0131.circuits.yaml  tau2020_testsuite0131.spef  tau2020v1.circuits.yaml  tau2020v1.spef  tau2020v2.circuits.yaml  tau2020v2.spef  test.circuits.yaml
test/spice_decks.tau2020_testsuite0131/: net_0.sp  net_0.sp.mt0  net_1.sp  net_1.sp.mt0  net_2.sp  net_2.sp.mt0  net_3.sp  net_3.sp.mt0  net_4.sp  net_4.sp.mt0  net_5.sp  net_5.sp.mt0  net_6.sp  net_6.sp.mt0  net_7.sp  net_7.sp.mt0  net_8.sp  net_8.sp.mt0  net_9.sp  net_9.sp.mt0
